# 3rd-sem-OS

./: .gitignore
colloquim23.10/: CMakeLists.txt  task.txt
colloquim23.10/include/: Solver.h
colloquim23.10/src/: Solver.cpp  main.cpp
colloquim23.10/tests/: SolverTest.cpp
lab1/: CMakeLists.txt  main.cpp
lab2/: CMakeLists.txt  main.cpp
lab3/: CMakeLists.txt
lab3/include/: MarkerManager.h
lab3/src/: MarkerManager.cpp  main.cpp
lab3/tests/: MarkerManagerTest.cpp
